<resources>
    <string name="app_name">Tamansari</string>
    <string name="title_home">Home</string>
    <string name="title_transaksi">Transaksi</string>
    <string name="title_pesan">Pesan</string>
    <string name="title_akun">Akun</string>
    <string name="toolbar_pemdes">Pemdes</string>
    <string name="toolbar_bumdes">Bumdes</string>
    <string name="toolbar_tps3r">TPS3R</string>
    <string name="toolbar_paket">Paket Wisata</string>
    <string name="toolbar_wisata">Daftar Wisata</string>
    <string name="toolbar_homestay">Homestay</string>
    <string name="navigation_news">Daftar Berita</string>
    <string name="navigation_detail_news">Detail Berita</string>
    <string name="navigation_detail_wisata">Detail Wisata</string>
    <string name="navigation_detail_homestay">Detail Homestay</string>
    <string name="navigation_list_homestay">Daftar Homestay</string>
    <string name="navigation_list_travel_package">Daftar Paket Wisata</string>
    <string name="navigation_list_restaurant">Daftar Restoran</string>
    <string name="navigation_detail_travel_package">Detail Paket Wisata</string>
    <string name="navigation_detail_restaurant">Detail Restoran</string>
    <string name="navigation_maps">Peta</string>
    <string name="navigation_choose_ticket">Pilih Tiket</string>
    <string name="navigation_choose_room">Pilih Kamar</string>
    <string name="navigation_review_transaction">Review Transaksi</string>
    <string name="navigation_choose_travel_package">Pilih Paket</string>
    <string name="navigation_payment">Pembayaran</string>
    <string name="navigation_my_ticket_wisata">Tiket saya</string>
    <string name="navigation_my_ticket_restaurant">Pesanan saya</string>
    <string name="navigation_tpsr">TPS3R</string>
    <string name="homestay">Homestay</string>
    <string name="waktu_checkin">Waktu Check-in:</string>
    <string name="waktu_checkout">Waktu Chek-out:</string>
    <string name="fasilitas">Fasilitas</string>
    <string name="lokasi">Lokasi</string>
    <string name="saldo">Saldo</string>
    <string name="harga_sampah">Harga Sampah</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="bantuan">Bantuan</string>
    <string name="faq">FAQ</string>
    <string name="pusat_bantuan">Pusat Bantuan</string>
    <string name="data_pribadi">Data Pribadi</string>
    <string name="notifikasi">Notifikasi</string>
    <string name="tentang">Tentang</string>
    <string name="wisata_populer">Wisata Populer</string>
    <string name="total_pembelian">Total Pembelian</string>
    <string name="riwayat">Riwayat</string>
    <string name="placeholder_homestay_name">Hadi Homestay</string>
    <string name="placeholder_jarak_lokasi">1,4 KM</string>
    <string name="placeholder_id">#SFAS44123</string>
    <string name="placeholder_claim">Claim</string>
    <string name="placeholder_nama_sampah">Botol Plastic</string>
    <string name="placeholder_liter">12.5 Ltr</string>
    <string name="placeholder_bulan">September</string>
    <string name="placeholder_judul_berita">Tamansari Banyuwangi Masuk 50 Besar Anugerah Desa Wisata Indonesia Tahun 2021 dari Kemenparekraf</string>
    <string name="placeholder_username">Rizal Sahputra</string>
    <string name="placeholder_lokasi">Banyuwangi</string>
    <string name="placeholder_email">rizalsahputra@gmail.com</string>
    <string name="placeholder_saldo">Rp 100.000</string>
    <string name="placeholder_vote_count">(100)</string>
    <string name="placeholder_nama_wisata">Sendang Seruni</string>
    <string name="placeholder_id_transaksi">Transaksi 1</string>
    <string name="placeholder_tanggal">24 Agustus 21, 20:48</string>
    <string name="placeholder_deskripsi_transaksi">Pembelian untuk pulsa 082132133213</string>
    <string name="placeholder_jenis_pesan">Lapor</string>
    <string name="placeholder_pesan">Laporan anda sudah kami teruskan ke RT/RW setempat, mohon ditunggu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description_image_wisata">Image Wisata</string>
    <string name="description_close_modal">Close modal</string>
    <string name="description_image_icon_transaction">Image icon transaction</string>
    <string name="description_image_rating">Image Rating</string>
    <string name="description_image_restaurant">Image Restaurant</string>
    <string name="description_image_news">Image News</string>
    <string name="description_image_homestay">Image Homestay</string>
    <string name="description_image_room">Image Room</string>
    <string name="description_image_travel_package">Image Paket Wisata</string>
    <string name="description_image_menu_restaurant">Image Menu Restaurant</string>
    <string name="description_image_notification">Notifikasi</string>
    <string name="description_image_method_payment">Image metode pembayaran</string>
    <string name="write_a_comment">Tulis komentar</string>
    <string name="terjual">Terjual</string>
    <string name="choose_ticket">Pilih Tiket</string>
    <string name="add">Tambah</string>
    <string name="choose_travel_package">Pilih paket</string>
    <string name="choose_room">Pilih Kamar</string>
    <string name="detail">Detail</string>
    <string name="start_from">Mulai dari</string>
    <string name="book">Pesan</string>
    <string name="detail_transaction">Detail Transaction</string>
    <string name="detail_customer">Detail Pemesan</string>
    <string name="ticket_cannot_be_refunded">Tiket tidak bisa refund</string>
    <string name="lanjut_ke_pembayaran">Lanjut ke Pembayaran</string>
    <string name="total_payment">Total Pembayaran</string>
    <string name="tidak_bisa_refund_dan_reschedule">Tidak bisa refund dan reschedule</string>
    <string name="checkin_date">Check-in</string>
    <string name="checkout_date">Check-out</string>
    <string name="choose_date">Pilih tanggal</string>
    <string name="date">Tanggal</string>
    <string name="mohon_tunggu_sebentar">Mohon tunggu sebentar</string>
    <string name="empty_data">Tidak ada data untuk ditampilkan</string>
    <string name="no_search_result_found">Nggak ada yang sesuai \"%s\"</string>
    <string name="no_search_result_found_sub_label">Yang kamu cari belum ketemu. coba cek keyword lain ya</string>
    <string name="cari_wisata_tamansari">Cari tempat wisata di Tamansari</string>
    <string name="cek_penawaran">Cek penawaran sebelum bepergian, kuy!</string>
    <string name="keluar">Keluar</string>
    <string name="lanjutkan_pembayaran">Lanjutkan Pembayaran</string>
    <string name="empty_transactions">Tidak ada transaksi</string>
    <string name="bayar">Bayar</string>

    <string name="warning_empty_username">Mohon isi username</string>
    <string name="warning_empty_phone_number">Mohon isi nomor ponsel</string>
    <string name="diantar_ke">Diantar ke</string>
    <string name="ringkasan_pembayaran">Ringkasan Pembayaran</string>
    <string name="price">Harga</string>
    <string name="ongkir">Ongkir</string>
    <string name="pesan_dan_antar_sekarang">Pesan dan antar sekarang</string>
    <string name="choose_location">Pilih lokasi</string>
    <string name="navigation_login">Login</string>

    <string name="about"></string>
    <string name="title_admin">admin</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="email">E-mail</string>
    <string name="password">password</string>
    <string name="or">Or</string>

</resources>