<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.bwx.tamansari.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.bwx.tamansari.ui.riwayat.RiwayatFragment"
        android:label="@string/title_transaksi"
        tools:layout="@layout/fragment_riwayat" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.bwx.tamansari.ui.pesan.PesanFragment"
        android:label="@string/title_pesan"
        tools:layout="@layout/fragment_pesan" />
</navigation>