<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="66dp"
    android:id="@+id/content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:paddingBottom="80dp">

        <TextView
            android:id="@+id/pengaturan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/pengaturan"
            android:textColor="@color/biru_tua"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/editData"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:drawablePadding="16dp"
            android:fontFamily="@font/poppins_semi_bold"
            android:gravity="center_vertical"
            android:text="@string/data_pribadi"
            android:textSize="14sp"
            app:drawableStartCompat="@drawable/ic_akun_user"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pengaturan" />

        <TextView
            android:id="@+id/notifikasi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:drawablePadding="16dp"
            android:fontFamily="@font/poppins_semi_bold"
            android:gravity="center_vertical"
            android:text="@string/notifikasi"
            android:textSize="14sp"
            app:drawableStartCompat="@drawable/ic_akun_notifikasi"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editData" />

        <TextView
            android:id="@+id/bantuan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/bantuan"
            android:textColor="@color/biru_tua"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/notifikasi" />

        <TextView
            android:id="@+id/faq"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:drawablePadding="16dp"
            android:fontFamily="@font/poppins_semi_bold"
            android:gravity="center_vertical"
            android:text="@string/faq"
            android:textSize="14sp"
            app:drawableStartCompat="@drawable/ic_akun_faq"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bantuan" />

        <TextView
            android:id="@+id/pusat_bantuan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:drawablePadding="16dp"
            android:fontFamily="@font/poppins_semi_bold"
            android:gravity="center_vertical"
            android:text="@string/pusat_bantuan"
            android:textSize="14sp"
            app:drawableStartCompat="@drawable/ic_akun_pusat_bantuan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/faq" />

        <TextView
            android:id="@+id/tentang"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:drawablePadding="16dp"
            android:fontFamily="@font/poppins_semi_bold"
            android:gravity="center_vertical"
            android:text="@string/tentang"
            android:textSize="14sp"
            app:drawableStartCompat="@drawable/ic_akun_tentang"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pusat_bantuan" />

        <TextView
            android:id="@+id/tv_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:drawablePadding="16dp"
            android:drawableTint="@color/grey"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="@string/keluar"
            android:textSize="14sp"
            app:drawableStartCompat="@drawable/ic_baseline_logout_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tentang" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>

