<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_wisata"
    app:startDestination="@id/navigation_detail_wisata">

    <fragment
        android:id="@+id/navigation_detail_wisata"
        android:name="com.bwx.tamansari.ui.wisata.detail.DetailWisataFragment"
        android:label="@string/navigation_detail_wisata"
        tools:layout="@layout/fragment_detail_wisata">
        <action
            android:id="@+id/action_navigation_detail_wisata_to_navigation_choose_ticket_wisata"
            app:destination="@id/navigation_choose_ticket_wisata" />
    </fragment>

    <fragment
        android:id="@+id/navigation_choose_ticket_wisata"
        android:name="com.bwx.tamansari.ui.wisata.choose_ticket.ChooseTicketWisataFragment"
        android:label="@string/navigation_choose_ticket"
        tools:layout="@layout/fragment_choose_ticket_wisata">
        <action
            android:id="@+id/action_navigation_choose_ticket_wisata_to_navigation_review_transaction_wisata"
            app:destination="@id/navigation_review_transaction_wisata" />
    </fragment>

    <fragment
        android:id="@+id/navigation_review_transaction_wisata"
        android:name="com.bwx.tamansari.ui.wisata.review.ReviewTransactionWisataFragment"
        android:label="@string/navigation_review_transaction"
        tools:layout="@layout/fragment_review_transaction_wisata">
        <action
            android:id="@+id/action_navigation_review_transaction_wisata_to_navigation_choose_payment_method"
            app:destination="@id/navigation_payment" />
    </fragment>

    <include app:graph="@navigation/navigation_payment" />


</navigation>